
	* libfreeipmi/sel/ipmi-sel-string-intel-xeon-common.[ch]: Split
	out firmware post specifics to
	ipmi-sel-string-intel-xeon-broadwell-common.[ch].  Update callers
	accordingly.

	* libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c
	(ipmi_get_oem_specific_message): Add S2600BPB support.

	* libfreeipmi/sel/ipmi-sel-string-intel-s2600bpb.c: New file.

2020-01-08 Albert Chu <chu11@llnl.gov>

	* bmc-device/bmc-device.c (write_fru): Fix invalid type in
	pstdout_printf().

	* libfreeipmi/sel/ipmi-sel-string-intel-e52600v3-common.c
	(sel_string_output_intel_e52600v3_event_data3_discrete_oem,
	(sel_string_output_intel_e52600v3_event_data3_discrete_oem):
	Rename local variable that masked outside scope variable name.

2020-01-07 Albert Chu <chu11@llnl.gov>

	Mountains of minor fixes found by lgtm.com

	* bmc-device/bmc-device.c (write_fru): Fix invalid number of args
	to pstdout_printf.

	* ipmi-dcmi/ipmi-dcmi.c (_mandatory_platform_attributes): Fix
	argument type passed pstdout_printf().

	* ipmi-dcmi/ipmi-dcmi.c (get_asset_tag): Fix lgtm.com warning by
	casting unsigned char * to wchar_t *.

	* ipmi-fru/ipmi-fru.c (run_cmd_args): Fix lgtm.com warning correct
	output type in pstdout_printf().

	* ipmi-oem/ipmi-oem-dell.c (ipmi_oem_dell_get_system_info): Fix
	invalid output with invalid variable passed to pstdout_printf().

	* ipmi-oem/ipmi-oem-intel.c (ipmi_oem_intel_get_smtp_config): Fix
	invalid call to pstdout_printf(), forgot output parameters.

	* ipmi-oem/ipmi-oem-intelnm.c
	(_ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common):
	Fix invalid call to pstdout_printf(), forgot output parameter.

	* ipmi-oem/ipmi-oem-quanta.c
	(ipmi_oem_quanta_get_processor_information): Fix invalid call to
	pstdout_printf(), forgot output parameters.

	* ipmi-sensors/ipmi-sensors-detailed-output.c
	(_detailed_output_accuracy): Escape % character for clarity.

	* ipmi-sensors/ipmi-sensors-oem-intel-quanta-qssc-s4r.c