@@ -25,6 +25,22 @@ extern "C" {
 
 #include <freeipmi/spec/oem/intel/ipmi-sensor-and-event-code-tables-oem-intel-common-spec.h>
 
+/*
+ * S2600BPB
+ */
+
+/* Event Reading Type Code = IPMI_EVENT_READING_TYPE_CODE_OEM_INTEL_NVME_CRITICAL_WARNING_SENSOR
+ * Sensor Type = IPMI_SENSOR_TYPE_DISK_DRIVE
+ */
+#define IPMI_OEM_INTEL_NVME_CRITICAL_WARNING_EVENT_DATA1_DISK_DRIVE_BITMASK 0x04
+#define IPMI_OEM_INTEL_NVME_CRITICAL_WARNING_EVENT_DATA1_DISK_DRIVE_SHIFT   0
+
+#define IPMI_OEM_INTEL_NVME_CRITICAL_WARNING_EVENT_DATA2_DISK_DRIVE_SPARE_SPACE_BELOW_THRESHOLD          0x01
+#define IPMI_OEM_INTEL_NVME_CRITICAL_WARNING_EVENT_DATA2_DISK_DRIVE_TEMPERATURE_ABOVE_OR_BELOW_THRESHOLD 0x02
+#define IPMI_OEM_INTEL_NVME_CRITICAL_WARNING_EVENT_DATA2_DISK_DRIVE_NVM_RELIABILITY_DEGRADED             0x04
+#define IPMI_OEM_INTEL_NVME_CRITICAL_WARNING_EVENT_DATA2_DISK_DRIVE_IN_READ_ONLY_MODE                    0x08
+#define IPMI_OEM_INTEL_NVME_CRITICAL_WARNING_EVENT_DATA2_DISK_DRIVE_VOLATILE_BACKUP_SERVICE_FAILED       0x10
+
 #ifdef __cplusplus
 }
 #endif
