@@ -25,6 +25,22 @@ extern "C" {
 
 #include <freeipmi/spec/oem/intel/ipmi-sensor-numbers-oem-intel-common-spec.h>
 
+/*
+ * Intel S2600BPB
+ */
+
+/* BMC owned sensors (GID = 0020h) */
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_FIRMWARE_SECURITY 0x1A
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_NVME1_THERM_MGN   0x91
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_NVME2_THERM_MGN   0x92
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_NVME3_THERM_MGN   0x93
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_NVME1_CRIT_WARN   0x94
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_NVME2_CRIT_WARN   0x95
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_NVME3_CRIT_WARN   0x96
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_BAD_USE_PWD       0xD7
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_KCS_POLICY        0xDA
+#define IPMI_SENSOR_NUMBER_OEM_INTEL_REMOTE_DEBUG      0xDB
+
 #ifdef __cplusplus
 }
 #endif
